# example

./: .env  README.md  config.py  main.py  pyproject.toml  sql_app.db
api/: __init__.py
api/routers/: __init__.py  employee.py
db/: schemas.py
models/: __init__.py
service/: employee_srv.py
