[tool.poetry]
name = "category"
version = "0.1.0"
description = ""
authors = ["selver96 <selver.said01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pymongo = {extras = ["srv"], version = "^4.0.2"}
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
